@@ -1,3 +1,6 @@
+* Dialer: add logging capability of events that happen to a call. For this a 
+  new database table was created. Allow campaign deletion to cope with the new
+  table. This is required functionality for call progress events.
 * Dialer: add new column calls.trunk to keep track of trunk used for outgoing
   call. Add outgoing trunk support to dialer code. This is required for planned
   functionality of trunk display of in-progress calls.
